@@ -1,5 +1,5 @@
 /*
- * Copyright 2019 the original author or authors.
+ * Copyright 2019-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 
+import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 
 import org.springframework.util.Assert;
@@ -52,22 +53,25 @@ public class CompositeBatchInterceptor<K, V> implements BatchInterceptor<K, V> {
 	}
 
 	@Override
-	public ConsumerRecords<K, V> intercept(ConsumerRecords<K, V> records) {
+	public ConsumerRecords<K, V> intercept(ConsumerRecords<K, V> records, Consumer<K, V> consumer) {
 		ConsumerRecords<K, V> recordsToIntercept = records;
 		for (BatchInterceptor<K, V> delegate : this.delegates) {
-			recordsToIntercept = delegate.intercept(recordsToIntercept);
+			recordsToIntercept = delegate.intercept(recordsToIntercept, consumer);
+			if (recordsToIntercept == null) {
+				break;
+			}
 		}
 		return recordsToIntercept;
 	}
 
 	@Override
-	public void success(ConsumerRecords<K, V> records) {
-		this.delegates.forEach(del -> del.success(records));
+	public void success(ConsumerRecords<K, V> records, Consumer<K, V> consumer) {
+		this.delegates.forEach(del -> del.success(records, consumer));
 	}
 
 	@Override
-	public void failure(ConsumerRecords<K, V> records, Exception exception) {
-		this.delegates.forEach(del -> del.failure(records, exception));
+	public void failure(ConsumerRecords<K, V> records, Exception exception, Consumer<K, V> consumer) {
+		this.delegates.forEach(del -> del.failure(records, exception, consumer));
 	}
 
 }
